--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -47,7 +47,7 @@ bindsym XF86MonBrightnessDown exec light -U 20 # decrease screen brightness
 
 
 # Media player controls
-bindsym XF86AudioPlay exec playerctl play-pause
+bindsym XF86AudioPlay exec playerctl -p spotify play-pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
